--- a/05_Development/Android_App/Santaclaus/app/src/main/AndroidManifest.xml
+++ b/05_Development/Android_App/Santaclaus/app/src/main/AndroidManifest.xml
@@ -8,16 +8,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".MessageActivity"></activity>
+        <!--         <activity android:name=".activity.LoginActivity" /> -->
+        <activity android:name=".activity.SignUpActivity" />
+        <activity android:name=".activity.MessageActivity" />
+        <activity android:name=".activity.ChildActivity"></activity>
     </application>
 
 </manifest>
