--- a/05_Development/Web/LOCWS/WebContent/WEB-INF/web.xml
+++ b/05_Development/Web/LOCWS/WebContent/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
-    <servlet-name>i119 Web Service</servlet-name>
+    <servlet-name>LOC Web Service</servlet-name>
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
       <param-name>jersey.config.server.provider.packages</param-name>
@@ -19,7 +19,7 @@
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
-    <servlet-name>i119 Web Service</servlet-name>
+    <servlet-name>LOC Web Service</servlet-name>
     <url-pattern>/rest/*</url-pattern>
   </servlet-mapping>
 </web-app>
