--- a/05_Development/Android_App/Santaclaus/app/src/main/AndroidManifest.xml
+++ b/05_Development/Android_App/Santaclaus/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.hackathon.santaclaus">
 
+    <!-- add these permissions -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
