--- a/05_Development/Android_App/Santaclaus/app/build.gradle
+++ b/05_Development/Android_App/Santaclaus/app/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'net.gotev:uploadservice:3.0.3'
-
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
 }
